configure the time to wait before requesting for payload
